--- a/Week 3 R Bridge Assignment Mushroom data.Rmd
+++ b/Week 3 R Bridge Assignment Mushroom data.Rmd
@@ -1,13 +1,13 @@
 Title
 ========================================================
 
-#Read in the mushroom data
+Read in the mushroom data
 ```{r}
 mushroomdata <- read.csv(file = "https://archive.ics.uci.edu/ml/machine-learning-databases/mushroom/agaricus-lepiota.data", head=FALSE, sep=",")
 ```
 
 
-#Store the list of column names
+Store the list of column names
 ```{r}
 mushroomcolnames<- c('edibility', 'cap-shape', 'cap-surface','cap-color', 'bruises', 'odor', 'gill-attachment', 'gill-spacing', 
                  'gill-size', 'gill-color', 'stalk-shape', 'stalk-root', 'stalk-surface-above-ring', 
@@ -15,12 +15,12 @@ mushroomcolnames<- c('edibility', 'cap-shape', 'cap-surface','cap-color', 'bruis
                  'veil-color', 'ring-number', 'ring-type', 'spore-print-color', 'population', 'habitat')
 ```
 
-#Name the columns of the mushroom data frame
+Name the columns of the mushroom data frame
 ```{r}
 colnames(mushroomdata) <- mushroomcolnames
 ```
 
-#Add poisonous and edible to levels of first column
+Add poisonous and edible to levels of first column
 ```{r}
 levels(mushroomdata[,1]) <- c(levels(mushroomdata[,1]), c("esculent","poisonous"))
 levels(mushroomdata[,2]) <- c(levels(mushroomdata[,2]), c("bell","conical","convex","flat","knobbed","sunken"))
@@ -30,13 +30,13 @@ levels(mushroomdata[,4]) <- c(levels(mushroomdata[,4]), c("brown", "buff", "cinn
 ```
 
 
-#Replace shorthand of first column for edibility with poisonous and esculent
+Replace shorthand of first column for edibility with poisonous and esculent
 ```{r}
 mushroomdata$edibility[mushroomdata$edibility == 'p'] <- 'poisonous'
 mushroomdata$edibility[mushroomdata$edibility == 'e'] <- 'esculent'
 ```
 
-#Replace shorthand of second column cap-shape
+Replace shorthand of second column cap-shape
 ```{r}
 mushroomdata$`cap-shape`[mushroomdata$`cap-shape` == 'b'] <- 'bell'
 mushroomdata$`cap-shape`[mushroomdata$`cap-shape` == 'c'] <- 'conical'
@@ -46,7 +46,7 @@ mushroomdata$`cap-shape`[mushroomdata$`cap-shape` == 'k'] <- 'knobbed'
 mushroomdata$`cap-shape`[mushroomdata$`cap-shape` == 's'] <- 'sunken'
 ```
 
-#Replace shorthand of third column cap-surface
+Replace shorthand of third column cap-surface
 ```{r}
 mushroomdata$`cap-surface`[mushroomdata$`cap-surface` == "f"] <- "fibrous"
 mushroomdata$`cap-surface`[mushroomdata$`cap-surface` == "g"] <- "grooves"
@@ -54,7 +54,7 @@ mushroomdata$`cap-surface`[mushroomdata$`cap-surface` == "y"] <- "scaly"
 mushroomdata$`cap-surface`[mushroomdata$`cap-surface` == "s"] <- "smooth"
 ```
 
-#Replace shorthand of fourth column cap-colo                          
+Replace shorthand of fourth column cap-color                          
 ```{r}
 mushroomdata$`cap-color`[mushroomdata$`cap-color` == "n"] <- "brown"
 mushroomdata$`cap-color`[mushroomdata$`cap-color` == "b"] <- "buff"
@@ -68,12 +68,12 @@ mushroomdata$`cap-color`[mushroomdata$`cap-color` == "w"] <- "white"
 mushroomdata$`cap-color`[mushroomdata$`cap-color` == "y"] <- "yellow"
 ```
 
-#Display the first four rows and columns to check results
+Display the first four rows and columns to check results
 ```{r}
 mushroomdata[1:4,1:4]
 ```
 
-#Subset the mushroom data frame to its first five rows and first five columns
+Subset the mushroom data frame to its first five rows and first five columns
 ```{r}
 submushroomdf<- mushroomdata[1:5,1:5]
 ```
