--- a/Week 3 R Bridge Assignment Mushroom data.Rmd
+++ b/Week 3 R Bridge Assignment Mushroom data.Rmd
@@ -9,10 +9,10 @@ mushroomdata <- read.csv(file = "https://archive.ics.uci.edu/ml/machine-learning
 
 Store the list of column names
 ```{r}
-mushroomcolnames<- c('edibility', 'cap-shape', 'cap-surface','cap-color', 'bruises', 'odor', 'gill-attachment', 'gill-spacing', 
-                 'gill-size', 'gill-color', 'stalk-shape', 'stalk-root', 'stalk-surface-above-ring', 
-                 'stalk-surface-below-ring', 'stalk-color-above-ring', 'stalk-color-below-ring', 'veil-type', 
-                 'veil-color', 'ring-number', 'ring-type', 'spore-print-color', 'population', 'habitat')
+mushroomcolnames<- c('edibility', 'cap-shape', 'cap-surface','cap-color', 'bruises', 'odor', 'gill-attachment', 
+                     'gill-spacing', 'gill-size', 'gill-color', 'stalk-shape', 'stalk-root', 'stalk-surface-above-ring', 
+                     'stalk-surface-below-ring', 'stalk-color-above-ring', 'stalk-color-below-ring', 'veil-type', 
+                     'veil-color', 'ring-number', 'ring-type', 'spore-print-color', 'population', 'habitat')
 ```
 
 Name the columns of the mushroom data frame
