--- a/Week 4 R Bridge Assignment.Rmd
+++ b/Week 4 R Bridge Assignment.Rmd
@@ -11,7 +11,7 @@ install.packages("ggplot2")
 require(ggplot2)
 ```
 
-#Quantitative columns are 1, 5, 6, 7, 8, 9, 10
+Quantitative columns are 1, 5, 6, 7, 8, 9, 10
 ```{r}
 quantcols <- c()
 charcols <- c()
