--- a/Week 4 Math Bridge Assignment: Matrices.Rmd
+++ b/Week 4 Math Bridge Assignment: Matrices.Rmd
@@ -10,7 +10,14 @@ coefs <- matrix(c(1,2,-1,2,1,1,-3,-3,0),3)
 values <- matrix(c(5,13,-8),3,1)
 round(coefs,values)
 ```
+ Output:
  
+      [,1] [,2] [,3]
+[1,]    1    2   -3
+[2,]    2    1   -3
+[3,]    0    0    0
+
+There are infinite solutions.
 
 Multiply Matrices A and B: AB
 
